Fixed responsivity of menu on tablet

--- a/platform/themes/milani/assets/sass/_custom.scss
+++ b/platform/themes/milani/assets/sass/_custom.scss
@@ -1331,7 +1331,7 @@ small {
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 992px) {
     .mobile-header-wrapper-style.sidebar-visible {
         opacity: 0;
         transform: translate(200px);
